@@ -3,6 +3,7 @@
 <p><strong>{LAST_NAME_LABEL}</strong><br />{LAST_NAME}</p>
 <p><strong>{EMAIL_LABEL}</strong><br />{EMAIL}</p>
 <p><strong>{PHONE_LABEL}</strong><br />{PHONE}</p>
+<p><strong>{ORGANIZATION_LABEL}</strong><br />{ORGANIZATION}</p>
 <br />
 <p class="align-center">{SUBMIT}</p>
 <br />
