@@ -1,17 +1,21 @@
 <!-- BEGIN people -->
-<table cellpadding="4" border="1" width="100%">
+<table cellpadding="5" border="1" width="100%">
   <tr>
     <th>{NAME_LABEL}</th>
     <th>{EMAIL_LABEL}</th>
     <th>{PHONE_LABEL}</th>
+    <th>{ORGANIZATION_LABEL}</th>
     <th>{ACTION_LABEL}</th>
+    <th>{MOVE_LABEL}</th>
   </tr>
 <!-- BEGIN peep-row -->
   <tr>
     <td>{FIRST_NAME} {LAST_NAME}</td>
     <td>{EMAIL}</td>
     <td>{PHONE}</td>
+    <td>{ORGANIZATION}</td>
     <td>{ACTION}</td>
+    <td>{MOVE}</td>
   </tr>
 <!-- END peep-row -->
 </table>
